Fixed adding and updating task